Bug #1912: Dashboard icons - Texts are not aligned to icons

--- a/Cloudents.Web/ClientApp/components/pages/layouts/sideMenu/sideMenu.less
+++ b/Cloudents.Web/ClientApp/components/pages/layouts/sideMenu/sideMenu.less
@@ -80,6 +80,8 @@
           border-left: solid 1px rgba(106, 105, 127, 0.26);
           background: none;
         .group_list_titles_dash{
+          display: flex;
+          align-items: center;
           .pts_svg{
             vertical-align: sub;
             fill: #bdc0d1;
@@ -88,6 +90,7 @@
             }
           }
           .group_list_icon_dash{
+            min-width: 22px;
             font-size: 18px;
             color: #bdc0d1;
           }
